<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visually</name>
  <version>0.0.0</version>
  <description>Visualising autonomous vehicle network entities and processes</description>
  <maintainer email="amir.intelli@gmail.com">amirint</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>shape_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>rviz_visual_tools</depend>
  <depend>ament_index_cpp</depend>
  <depend>libpcl-all-dev</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>cpm_ros_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>geographiclib</depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>map_loader</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
